--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.29.0
-pandas==2.1.4
-requests==2.31.0
-python-dateutil==2.8.2
-openpyxl==3.1.2
+streamlit>=1.29.0
+pandas>=2.1.4
+requests>=2.31.0
+python-dateutil>=2.8.2
+openpyxl>=3.1.2
